--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
   <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta property="og:image" content="https://imgur.com/i9mqZ1u" />
+  <meta property="og:image" content="https://vietnam-trader.com/assets/img/favicon.png" />
   <title>Vietnam-Trader</title>
   <meta name="google-site-verification" content="5gaqRsjWukLT7yHiD0cCCu5F1pnhxOEIk-LGxdO7v5A" />
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
